usb-moded (0.38) unstable; urgency=low
  
  * Fix lintian warning
  * Fix doxygen warnings and improve documentation
  * Add dynamic mode support
  * Add debug printing for finding who keeps the mass-storage device busy

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Tue, 03 May 2011 14:57:38 +0300

usb-moded (0.37) unstable; urgency=low
  
   * Aegis introspection fix patch by Alexander Schertz. Fixes: NB#248291
   * Fix sysfs path for cdrom export.

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 21 Apr 2011 18:38:11 +0300

usb-moded (0.36) unstable; urgency=low

  * Do not check for default gateway anymore. Network config
    has been fixed. Fixes: NB#246401
  * Echo "" to the lun to disable  mass-storage exports instead of 0
  * Improved appsync by Simo Piiroinen 
  * More robust udev

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 21 Apr 2011 18:38:11 +0300

usb-moded (0.35) unstable; urgency=low

  * Some code clean-up
  * Stop using a thread for udev to avoid thread-locking in dbus.
    Patch by Simon McVittie. Fixes: NB#247014 
  * Have g_nokia support for N900 on Meego
  * Increase mass-storage file export timeout to make sure autoplay keeps working 
    on Windows(tm)

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Tue, 19 Apr 2011 12:29:58 +0300

usb-moded (0.34) unstable; urgency=low

  * Fixes for USB autoplay. Fixes: NB#220474
  * Added cdrom emulation support. Fixes: NB#244861
  * Added udev option for cable detection

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Fri, 01 Apr 2011 13:22:51 +0300

usb-moded (0.33) unstable; urgency=low

  * More security guesswork. Hopefully the doxygen tags are
    correct now. Fixes: NB#231818

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 17 Mar 2011 12:48:49 +0200

usb-moded (0.32) unstable; urgency=low

  * Coverity fixes. Fixes: NB#235405
  * Make charging fallback timeout shorter. Fixes: NB#234094
