@@ -1,0 +1,2 @@
+* verify appsync/usb_moded functionality with multiple sessions
+* Fix daemon mode
