@@ -12,3 +12,4 @@ mount = /home/user/MyDocs
 [cdrom]
 path =
 timeout =
+
